Fixed Horizontal Scroll

--- a/abt.css
+++ b/abt.css
@@ -2,6 +2,7 @@
 body {
   background-color: black;
   margin: 0;
+  overflow-x: hidden;
 }
 
 nav.stroke ul li a,
